--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,6 @@
   font-family: sans-serif;
   font-size: 12px;
   color: #fff;
-  background: #FF88AA;
   user-select: none;
   margin: 0; padding: 0;
 }
@@ -17,6 +16,7 @@ $header-height: 24px;
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
+  background: #FF88AA;
 }
 
 #header {
@@ -37,7 +37,7 @@ $header-height: 24px;
   margin-top: $header-height;
   width: 120px;
   height: 100%;
-  background: rgba(255, 255, 255, 0.1);
+  backgrond: none;
 }
 
 #content {
